--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ google-api-core==2.11.0
 google-api-python-client==2.86.0
 google-auth==2.18.0
 google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
 google-cloud-bigquery==3.10.0
 google-cloud-core==2.3.2
 google-crc32c==1.5.0
@@ -30,6 +31,7 @@ google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
 grpcio==1.54.2
 grpcio-status==1.54.2
+gspread==5.9.0
 httplib2==0.22.0
 idna==3.4
 ipykernel==6.23.0
@@ -61,6 +63,7 @@ nest-asyncio==1.5.6
 notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.24.3
+oauthlib==3.2.2
 packaging==23.1
 pandas==2.0.1
 pandocfilters==1.5.0
@@ -90,7 +93,9 @@ PyYAML==6.0
 pyzmq==25.0.2
 qtconsole==5.4.3
 QtPy==2.3.1
+randomuser==1.6
 requests==2.30.0
+requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rsa==4.9
@@ -99,6 +104,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.2
+tabulate==0.9.0
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.3.1
